# sel4-hobd-prototype

./: .gitmodules  README.md  wiring_diagram.xml
configs/: imx6_sabre_lite.cmake
diagrams/: wiring_diagram.xml
patches/: project_libs.patch  util_libs.patch
projects/hobd-system/: CMakeLists.txt
projects/hobd-system/include/: config.h  ipc_util.h  root_task.h  sel4_mr.h  thread.h
projects/hobd-system/modules/console/include/: cli.h  console_module.h
projects/hobd-system/modules/console/src/: cli.c  console_module.c
projects/hobd-system/modules/hobd/include/: comm.h  hobd.h  hobd_kline.h  hobd_module.h  hobd_msg.h
projects/hobd-system/modules/hobd/src/: comm.c  hobd_module.c  hobd_parser.c
projects/hobd-system/modules/mmc/include/: fat_custom.h  mmc.h  mmc_entry.h  mmc_file.h  mmc_module.h
projects/hobd-system/modules/mmc/src/: mmc_file.c  mmc_module.c
projects/hobd-system/modules/system/include/: system_module.h
projects/hobd-system/modules/system/src/: system_module.c
projects/hobd-system/modules/time_server/include/: time_server.h  time_server_module.h
projects/hobd-system/modules/time_server/src/: time_server_module.c
projects/hobd-system/src/: main.c  platform.c  root_task.c  thread.c
projects/hobd_system/: CMakeLists.txt
projects/hobd_system/include/: config.h  init_env.h  platform.h  root_task.h  thread.h
projects/hobd_system/modules/hobd/include/: hobd_kline.h  hobd_module.h  hobd_parser.h
projects/hobd_system/modules/hobd/src/: hobd_module.c  hobd_parser.c
projects/hobd_system/modules/system/src/: system_module.c
projects/hobd_system/src/: main.c  platform.c  root_task.c  thread.c
scripts/: apply-patches  build  create-sdcard-img  hard-reset-submodules
testing-tools/fake-hobd-ecu-data/: CMakeLists.txt
testing-tools/fake-hobd-ecu-data/src/: ecu.c  hobd_parser.c  main.c
testing-tools/hobd-log-entry-dump/: CMakeLists.txt  README.md
testing-tools/hobd-log-entry-dump/src/: main.c
testing_tools/fake_hobd_ecu_data/: CMakeLists.txt
testing_tools/fake_hobd_ecu_data/include/: ecu.h
testing_tools/fake_hobd_ecu_data/src/: ecu.c  hobd_parser.c  main.c
